--- a/glide.yaml
+++ b/glide.yaml
@@ -2,12 +2,9 @@ package: github.com/elastos/Elastos.ELA.Client.SideChain
 import:
 - package: github.com/elastos/Elastos.ELA.Utility
   version: refactor
-- package: github.com/elastos/Elastos.ELA.Client.Core
+- package: github.com/elastos/Elastos.ELA.Client
+  repo:    git@github.com:elastos/Elastos.ELA.Client.git
   version: refactor
-- package: github.com/AlexpanXX/gopass
-- package: github.com/itchyny/base58-go
-- package: github.com/mattn/go-sqlite3
-- package: github.com/urfave/cli
 ignore:
   - golang.org/x/sys/unix
   - golang.org/x/sys/windows
