--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/elastos/Elastos.ELA.Client
+package: github.com/elastos/Elastos.ELA.Client.SideChain
 import:
 - package: golang.org/x/crypto
   repo: https://github.com/golang/crypto.git
@@ -10,7 +10,7 @@ import:
   subpackages:
   - common
   - crypto
-- package: github.com/elastos/Elastos.ELA
+- package: github.com/elastos/Elastos.ELA.SideChain
   subpackages:
   - core
 - package: github.com/howeyc/gopass
