--- a/glide.yaml
+++ b/glide.yaml
@@ -6,13 +6,10 @@ import:
 - package: golang.org/x/sys
   repo: https://github.com/golang/sys.git
   vcs: git
-- package: github.com/elastos/Elastos.ELA.Utility
+- package: github.com/elastos/Elastos.ELA
   subpackages:
   - common
   - crypto
-- package: github.com/elastos/Elastos.ELA.SideChain
-  subpackages:
-  - core
 - package: github.com/howeyc/gopass
 - package: github.com/cheggaaa/pb
 - package: github.com/mattn/go-sqlite3
